test/pending/neg/plugin-multiple-rafter/lib/plugins.jar.desired.sha1
2bda582b574287429ad5ee2e1d9a3effc88b0a5f ?plugins.jar
